--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://dislocked.github.io/squad-builder",
+  "homepage": "http://anzaldoivan.github.io/squad-builder",
   "name": "IOSoccerSquadBuilder",
   "version": "0.1.0",
   "private": true,
